@@ -3,7 +3,7 @@
 # Contributor: William Rea <sillywilly@gmail.com>
 
 pkgname=fontforge
-pkgver=20080607
+pkgver=20080720
 pkgrel=1
 pkgdesc="An outline and bitmap font editor"
 arch=('i686' 'x86_64')
@@ -13,13 +13,13 @@ depends=('libxkbui' 'libxi')
 makedepends=('freetype2')
 options=('!libtool' '!makeflags')
 source=(http://downloads.sourceforge.net/sourceforge/fontforge/fontforge_full-${pkgver}.tar.bz2)
-md5sums=('be0739f9ab74555bebbb8acb6e7de519')
-sha1sums=('5c72921bb43556ec0b6c174f07f9406065363feb')
+md5sums=('c8f4678bb79eb125cc2b958757256f10')
+sha1sums=('e964955d5257b5c88887823293d069ce372bf0fa')
 
 build() {
-  cd ${startdir}/src/${pkgname}-${pkgver}
+  cd ${srcdir}/${pkgname}-${pkgver}
   ./configure --prefix=/usr --mandir=/usr/share/man --with-multilayer --with-devicetables --without-python || return 1
   make || return 1
-  make DESTDIR=${startdir}/pkg install || return 1
-  install -D -m644 LICENSE ${startdir}/pkg/usr/share/licenses/${pkgname}/LICENSE || return 1
+  make DESTDIR=${pkgdir} install || return 1
+  install -D -m644 LICENSE ${pkgdir}/usr/share/licenses/${pkgname}/LICENSE || return 1
 }
