@@ -1,3 +1,8 @@
+2008-07-20  Eric Belanger  <eric@archlinux.org>
+
+	* fontforge 20080720-1
+	* Upstream update
+
 2008-06-13  Eric Belanger  <eric@archlinux.org>
 
 	* fontforge 20080607-1
